--- a/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/Resources/PerfilResource.resx
+++ b/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/Resources/PerfilResource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Administrador" type="System.Int32, mscorlib">
+  <data name="Administrator" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
   <data name="Cliente" xml:space="preserve">
