--- a/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/Resources/TipoHierarquiaResource.resx
+++ b/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/Resources/TipoHierarquiaResource.resx
@@ -128,6 +128,6 @@
     <value>Root</value>
   </data>
   <data name="Unidade" xml:space="preserve">
-    <value>Unidade</value>
+    <value>Unit</value>
   </data>
 </root>
